syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/ferza17/ecommerce-microservices-v2/product-service/model/pb";

message CreateProductEventStoreRequest {
  string id = 1;
  string saga_id = 2;
  string entity = 3;
  string entity_id = 4;
  string event_type = 5;
  string status = 6; // pending, completed, failed, rolled_back
  ProductState  payload = 7;
  optional ProductState previous_state = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message ProductState {
  optional string id = 1;
  optional string name = 2;
  optional double price = 3;
  optional int64 stock = 4;
  optional string description = 5;
  optional string image = 6;
  optional string uom = 7;
  optional google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp updated_at = 9;
  optional google.protobuf.Timestamp discarded_at = 10;
}

message CreateProductEventStoreResponse {
  string id = 1;
}
